@@ -69,8 +69,8 @@ binutils="binutils:arc_4_8-binutils-2_23_1-dev"
 gcc="gcc:arc_4_8-gcc-4_8-dev"
 gdb="gdb:arc_4_8-gdb-7_5_1-dev"
 newlib="newlib:arc_4_8-newlib-2_0-dev"
-uclibc="uClibc:arc_4_8-uClibc-0_9_30-dev"
-linux="linux:stable-arc-3.2"
+uclibc="uClibc:arc-uclibc-mainline"
+linux="linux:arc-3.8-ABI-v3"
 
 for version in ${cgen} ${binutils} ${gcc} ${gdb} ${newlib} ${uclibc} ${linux}
 do
